--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -142,11 +142,10 @@
   width: 100%;
   height: 100%;
 }
-#waiting {
-  position: absolute;
+.spinner {
+  position: relative;
   top:50%;
-  left: 50%;
-  margin-left: -32px;
   margin-top: -45px;
   text-align: center;
+  text-transform: uppercase;
 }
